# MoneyBot

./: .flake8  .gitignore  README.md  bot.py  docker-compose.yml  dump.rdb  main.py  pyproject.toml  redis_pool.py  routes.py  settings.py  system.py  test_main.http
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 2612abe9955d_add_calculation_and_asset_model.py  4679bbac758d_bigint_id_added.py  b40d498b8bf2_update_numeric_precision.py  c23f45a716cf_add_user_model.py
handlers/: __init__.py  calculations_handler.py  messages.py  rates_handler.py  states.py
handlers/callback_handlers/: __init__.py  calculations_callback_handlers.py  common_callback_handler.py
keyboards/: button_tickers.py  calculation_keyboards.py  common_keyboards.py  rates_keyboards.py
orm/: crud.py  database.py  models.py  schemas.py
service/: binance_api.py  binance_test.py  bot.py  calculator.py  currencylayer_api.py  redis_pool.py  routes.py
